---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i32, i32 }

@main_instance = global %main { i32 0, i32 60 }

define void @main(%main* %0) {
entry:
  %DAYS_IN_MONTH = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %SIXTY = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  %load_DAYS_IN_MONTH = load i32, i32* %DAYS_IN_MONTH, align [filtered]
  switch i32 %load_DAYS_IN_MONTH, label %else [
  ]

case:                                             ; preds = %range_then
  store i32 29, i32* %DAYS_IN_MONTH, align [filtered]
  br label %continue

case4:                                            ; preds = %range_then5
  store i32 30, i32* %DAYS_IN_MONTH, align [filtered]
  br label %continue

else:                                             ; preds = %entry
  %load_DAYS_IN_MONTH1 = load i32, i32* %DAYS_IN_MONTH, align [filtered]
  %tmpVar = icmp sge i32 %load_DAYS_IN_MONTH1, 32
  br i1 %tmpVar, label %range_then, label %range_else

range_then:                                       ; preds = %else
  %load_DAYS_IN_MONTH2 = load i32, i32* %DAYS_IN_MONTH, align [filtered]
  %tmpVar3 = icmp sle i32 %load_DAYS_IN_MONTH2, 60
  br i1 %tmpVar3, label %case, label %range_else

range_else:                                       ; preds = %range_then, %else
  %load_DAYS_IN_MONTH7 = load i32, i32* %DAYS_IN_MONTH, align [filtered]
  %tmpVar8 = icmp sge i32 %load_DAYS_IN_MONTH7, 62
  br i1 %tmpVar8, label %range_then5, label %range_else6

range_then5:                                      ; preds = %range_else
  %load_DAYS_IN_MONTH9 = load i32, i32* %DAYS_IN_MONTH, align [filtered]
  %tmpVar10 = icmp sle i32 %load_DAYS_IN_MONTH9, 70
  br i1 %tmpVar10, label %case4, label %range_else6

range_else6:                                      ; preds = %range_then5, %range_else
  store i32 31, i32* %DAYS_IN_MONTH, align [filtered]
  br label %continue

continue:                                         ; preds = %range_else6, %case4, %case
  ret void
}
